--- a/KC_Dragon_Ball_IOS_Avanzado/Presentation/Login/LoginViewController.xib
+++ b/KC_Dragon_Ball_IOS_Avanzado/Presentation/Login/LoginViewController.xib
@@ -28,7 +28,7 @@
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="pWm-sR-9RC" userLabel="SV Login">
                     <rect key="frame" x="71.666666666666686" y="661" width="250" height="130"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="jcrubio@equinsa.es" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="afA-Dj-uSA">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="afA-Dj-uSA">
                             <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="GNe-M6-GLi"/>
